# app/account/user/User.route.ts
@@ -6,5 +6,5 @@ export const UserRoute: express.Router = express.Router()
     .get("/", UserController.All)
     .get("/:idUser", [UserExist], UserController.Find)
     .post("/", [CheckCreate, CheckLoginAvailable], UserController.Create)
-    .put("/", [CheckUpdate, UserExist, CheckLoginAvailable], UserController.Update)
-    .delete("/", [CheckDelete, UserExist], UserController.Delete);
+    .put("/:idUser", [CheckUpdate, UserExist, CheckLoginAvailable], UserController.Update)
+    .delete("/:idUser", [CheckDelete, UserExist], UserController.Delete);
